fix: Scrollbar issue on Admin Dashboard

--- a/apps/admin-dashboard/app/tailwind.css
+++ b/apps/admin-dashboard/app/tailwind.css
@@ -16,3 +16,7 @@ button:focus-visible {
   outline-style: solid;
   outline-width: 1px;
 }
+
+.overflow-scroll {
+  overflow: auto;
+}
